# Pedestrian-Vehicle-Detection

src/: CMakeLists.txt
toolkit/RectGrabber/: CMakeLists.txt  utils.h
